<resources>
    <string name="app_name">SoyResponsable</string>
    <string name="title_profile">Profile</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_issue">List issues</string>
    <string name="title_map">Map view</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="upload">Upload</string>
    <string name="register">Register ?</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="see_more_details"><u>See more details...</u></string>
    <string name="up_votes">Up votes:</string>
    <string name="down_votes">Down votes:</string>
    <string name="comments">Comments:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image_of_the_issue">Image of the issue</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="user">User</string>
    <string name="multiline_comment_example">Multiline comment example. Multiline comment example. Multiline comment example.Multiline comment example.Multiline comment example.</string>
    <string name="create_at">24.11.2018</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="profile_picture">Profile picture</string>
    <string name="age">Age</string>
    <string name="radius">Radius</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="hello_blank_fragment">There are none issues</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">2126858534065258</string>
    <string name="fb_login_protocol_scheme">fb2126858534065258</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCcUEUaMQL0_6tvsTyPjwMc_gxeaDnAbjY</string>


</resources>
