<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/issue_card_view">

    <RelativeLayout
        android:background="@drawable/comment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:padding="2dp"
            android:src="@drawable/ic_avatar" />

        <LinearLayout
            android:id="@+id/linear_comment"
            android:layout_toRightOf="@id/profile_image"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/comment_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:padding="3dp"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/user"
                android:textStyle="bold"
                android:hint="@string/user"/>

            <TextView
                android:id="@+id/comment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="italic"
                android:padding="3dp"
                android:textSize="10sp"
                android:text="@string/multiline_comment_example"
                android:hint="@string/multiline_comment_example"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/comment_createdAt"
                android:text="@string/create_at"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_marginRight="30dp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:padding="3dp"/>
        </LinearLayout>

        <ImageButton
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/linear_comment"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/delete"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>