<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    android:background="@drawable/issue_card_view"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_issue"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_logo"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/title_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:hint="Title"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/description_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_below="@id/title_issue"/>

        <ImageView
            android:id="@+id/thumbs_up_issue"
            android:layout_below="@id/up_votes"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="3dp"
            android:src="@drawable/thumbs_up"
            android:layout_marginLeft="65dp"/>

        <TextView
            android:id="@+id/up_votes"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_below="@id/description_issue"
            android:text="@string/up_votes"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/thumbs_up_issue_txt"
            android:layout_alignBottom="@id/up_votes"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/up_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:layout_marginLeft="5dp"
            android:textSize="8sp"/>

        <ImageView
            android:id="@+id/thumbs_down_issue"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="90dp"
            android:padding="3dp"
            android:src="@drawable/thumbs_down"
            android:layout_below="@id/down_votes"
            android:layout_toRightOf="@id/thumbs_up_issue" />

        <TextView
            android:id="@+id/down_votes"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_below="@id/description_issue"
            android:layout_toRightOf="@+id/thumbs_up_issue_txt"
            android:text="@string/down_votes"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/thumbs_down_issue_txt"
            android:layout_alignBottom="@id/up_votes"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/down_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="101"
            android:layout_marginLeft="5dp"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/see_more_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumbs_down_issue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/see_more_details"
            android:textAlignment="center"
            android:textColor="@color/colorBlue"
            android:textSize="8sp" />
    </RelativeLayout>

</LinearLayout>
